--- a/web/src/App.css
+++ b/web/src/App.css
@@ -3,40 +3,47 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  box-sizing: border-box;
+}
+
+.header {
+  background-color: white;
+  width: 100%;
+  max-width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  gap: 60px;
+  padding: 30px 60px;
+  border-bottom: rgba(0, 0, 0, 0.1) solid 1px;
+  box-sizing: border-box;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  height: 30px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-btn.user-btn {
+  margin-left: auto;
+  width: fit-content;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  gap: 30px
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.login-btn {
+  border: none;
+  color: white;
+  background-color: black;
+  padding: 10px 20px;
+  border-radius: 50px;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.language-selector {
+  font-size: inherit;
+  border: none;
+  background-color: inherit;
 }
