--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: white;
+  color: black;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,12 +14,13 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  font-weight: inherit;
+  color: inherit;
   text-decoration: inherit;
+  transition: opacity 0.2s ease;
 }
 a:hover {
-  color: #535bf2;
+  opacity: 0.5;
 }
 
 body {
