web: setup login, signup, validate ui, add multilanguage support
Signed-off-by: KOWX712 <leecc0503@gmail.com>

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -18,6 +18,7 @@ a {
   color: inherit;
   text-decoration: inherit;
   transition: opacity 0.2s ease;
+  user-select: none;
 }
 a:hover {
   opacity: 0.5;
@@ -33,7 +34,8 @@ body {
 
 h1 {
   font-size: 3.2em;
-  line-height: 1.1;
+  line-height: 1.3;
+  user-select: none;
 }
 
 button {
@@ -46,6 +48,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  user-select: none;
 }
 button:hover {
   border-color: #646cff;
@@ -53,6 +56,22 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.gradient-blue {
+    background: linear-gradient(90deg, #55afd6, #2e6bcd);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: transparent;
+}
+
+.gradient-black {
+    background: linear-gradient(90deg, #030303, #757575);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: transparent;
 }
 
 @media (prefers-color-scheme: light) {
