--- a/web/src/App.css
+++ b/web/src/App.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+main {
+  padding-top: 90px;
+  box-sizing: border-box;
+}
+
 .header {
   background-color: white;
   width: 100%;
@@ -46,4 +51,30 @@
   font-size: inherit;
   border: none;
   background-color: inherit;
+}
+
+.header-nav {
+  display: flex;
+  gap: 20px;
+}
+
+.nav-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  color: #000;
+  padding: 10px;
+  border-radius: 8px;
+  transition: background-color 0.25s;
+}
+
+.nav-btn:hover {
+  background-color: #f9f9f9;
+}
+
+.nav-btn.active {
+  text-decoration: underline;
 }
