--- a/web/src/pages/Validate.css
+++ b/web/src/pages/Validate.css
@@ -96,3 +96,9 @@
     border-radius: 5px;
     width: 0%;
 }
+
+@media (max-width: 768px) {
+  .declaration {
+    max-width: calc(100% - 40px);
+  }
+}
